# crashtransformer

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  crash_transformer_pipeline.py  crashtransformer.py  create_visualizations.py  cross_validation_module.py  enhanced_evaluation.py  inference_script.py  main.py  pyproject.toml  quick_visualizations.py  run_comprehensive_evaluation.py  test_pipeline.py
docs/: 00_START_HERE.md  CHANGELOG.md  CLI_REFERENCE.md  CONTRIBUTING.md  COST_PERFORMANCE.md  DATA_SPEC.md  ENVIRONMENT_SETUP.md  FINE_TUNING_GUIDE.md  INTERACTIVE_SETUP.md  INTRODUCTION.md  NEO4J_GUIDE.md  OUTPUTS.md  PROVIDERS_GUIDE.md  TROUBLESHOOTING_FAQ.md  USAGE_GUIDE.md  index.md
results/: causal_summaries.csv  generated_summaries.csv  metrics.json  visualization_summary.txt
results/metrics/: comprehensive_metrics.json  summary_statistics.txt
results/raw_data/: evaluation_data.json
src/: __init__.py  cross_validation_module.py  enhanced_evaluation.py  main_pipeline.py  prepare_training_data.py  setup_env.py  train_model.py
src/misc/: __init__.py  logger.py
src/utils/: __init__.py  advanced_metrics.py  causal_plan_summarizer.py  config.py  cost_tracker.py  crash_graph_llm.py  fine_tuning.py  llm_providers.py  neo4j_io.py
