[project]
name = "crashtransformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "bert-score>=0.3.13",
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "matplotlib>=3.10.3",
    "nltk>=3.8.1",
    "ollama>=0.5.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=2.2.2",
    "torch>=2.7.1",
    "transformers>=4.54.0",
    "wordcloud>=1.9.2",
]
